--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="ChatBot AI">
+  <meta property="og:description" content="A chatbot in web that you can chat with.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatBot AI</title>
