--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,7 +11,7 @@
     <h1>ChatBot AI</h1>
     <div id="chat-container">
         <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Type your message...">
+        <input type="text" id="user-input" placeholder="Type your message..." autocomplete=off>
         <button id="send-button">Send</button>
 	<button id="clear-button">Clear Chat</button>
     </div>
